--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.28.4",
     "axios": "^1.6.8",
     "firebase": "^10.9.0",
     "localforage": "^1.10.0",
@@ -20,8 +21,10 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.10.6"
+    "sweetalert2": "^11.10.6",
+    "swiper": "^11.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
