--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.28.4",
+    "aos": "^2.3.4",
     "axios": "^1.6.8",
     "firebase": "^10.9.0",
     "localforage": "^1.10.0",
