--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-helmet-async": "^2.0.4",
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
