--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.51.0",
     "react-icons": "^5.0.1",
     "react-modal": "^3.16.1",
+    "react-parallax": "^3.5.1",
     "react-router-dom": "^6.22.3",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
