--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^2.6.2",
+    "@stripe/stripe-js": "^3.2.0",
     "@tanstack/react-query": "^5.28.4",
     "aos": "^2.3.4",
     "axios": "^1.6.8",
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.22.3",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "stripe": "^14.23.0",
     "sweetalert2": "^11.10.6",
     "swiper": "^11.0.7"
   },
